update user modal & make some login/register tweaks!
